# fink

./: .gitignore  README.md  package-lock.json  package.json  serverless.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/tests/data/: connect.json
docs/: data-flow-diagram.puml
frontend/: .gitignore  package.json
frontend/public/: index.html  manifest.json
frontend/src/: WSClient.js  index.css  index.js  ws.config.template.json
frontend/src/actions/: messages.js
frontend/src/components/: App.js  App.test.js  Messages.js  Say.js
frontend/src/reducers/: messages.js
