[package]
name = "backend"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = { version = "0.2.22", features = ["macros"] }
serde = "1.0"
serde_json = "1.0"